Fix console logs and css classes to replace 'shifty' with 'hub'

--- a/app/modules/settings/components/style.scss
+++ b/app/modules/settings/components/style.scss
@@ -15,7 +15,7 @@
         margin-right: 1.5em;
     }
 
-    .value-shifty-host {
+    .value-hub-host {
         width: 15em;
     }
 }
